fix(sonar): clear 28 findings and entity duplication
Record patterns and unnamed variables in FutureEvent replay and shift switches; Math.clamp for clamping; 3-arg RoundActionBufferEntity constructor; single-invocation assertThatThrownBy lambdas; isZero, matcher cleanup, unnamed catch, smoke-test assertion; shared GameEraPlayerEventEntity mapped superclass.